# endstarter

./: AGENTS.md  LICENSE  README.md  pyproject.toml
endstarter/: __init__.py  __main__.py  cli.py  config.py  errors.py  output.py
endstarter/actions/: assertion.py  base.py  input.py  interaction.py  navigation.py  utility.py
endstarter/drivers/: browser.py  manager.py
endstarter/models/: job.py  result.py
endstarter/parser/: yaml_parser.py
endstarter/runner/: job_runner.py
examples/: .hello_world.yml.swp  hello_world.yml  keyboard_mouse.yml  login_flow.yml
tests/: test_input.py  test_interaction.py  test_parser.py
