[project]
name = "endstarter"
version = "0.1.0"
description = "E2E Testing in YAML, self-hosted, and headless"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
authors = [{name = "Hanz", email = "hanz@example.com"}]
keywords = ["e2e", "testing", "selenium", "yaml", "headless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
endstarter = "endstarter.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
